--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -464,7 +464,7 @@ html, body {
 			&:before {
 				display: block;
 				position: absolute;
-				top: -10px;
+				bottom: 86%;
 				left: 50%;
 				-webkit-transform: translateX(-50%);
 				-moz-transform: translateX(-50%);
